--- a/portfolio/src/index.css
+++ b/portfolio/src/index.css
@@ -69,17 +69,17 @@ body {
 .slider-item {
   cursor: pointer;
   width: 33%;
-
   border-radius: 5px;
   transition: all 0.3s ease;
+  color: white;
 }
 
 .slider-item.active {
-  border-color: gold;
+  border-bottom: thick solid white;
 }
 
 .job-title {
-  color: red;
+  color: white;
   font-size: 8px;
   font-family: "Georgia, serif";
 }
@@ -87,12 +87,14 @@ body {
 
 .job-summary {
   width: 100%;
+  color: white;
 }
 
 .job-summary h2 {
   margin-top: 0;
   font-size: 2.5rem;
   font-weight: bold;
+  color: white;
 }
 
 .job-summary p {
@@ -100,6 +102,7 @@ body {
   margin-bottom: 20px;
   font-size: 1.5rem;
   font-weight: bold;
+  color: white;
 }
 
 .job-summary ul {
