--- a/portfolio/src/index.css
+++ b/portfolio/src/index.css
@@ -13,7 +13,10 @@ html {
 }
 
 body {
-  background-color: #0B0B45;
+  background-color: #2F47FF;
+background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='100%25' height='100%25' viewBox='0 0 1600 800'%3E%3Cg stroke='%23000' stroke-width='66.7' stroke-opacity='0.05' %3E%3Ccircle fill='%232F47FF' cx='0' cy='0' r='1800'/%3E%3Ccircle fill='%232e43f3' cx='0' cy='0' r='1700'/%3E%3Ccircle fill='%232c3fe7' cx='0' cy='0' r='1600'/%3E%3Ccircle fill='%232a3bdb' cx='0' cy='0' r='1500'/%3E%3Ccircle fill='%232838cf' cx='0' cy='0' r='1400'/%3E%3Ccircle fill='%232634c4' cx='0' cy='0' r='1300'/%3E%3Ccircle fill='%232430b8' cx='0' cy='0' r='1200'/%3E%3Ccircle fill='%23222cad' cx='0' cy='0' r='1100'/%3E%3Ccircle fill='%232029a2' cx='0' cy='0' r='1000'/%3E%3Ccircle fill='%231e2597' cx='0' cy='0' r='900'/%3E%3Ccircle fill='%231c228c' cx='0' cy='0' r='800'/%3E%3Ccircle fill='%23191e81' cx='0' cy='0' r='700'/%3E%3Ccircle fill='%23171b77' cx='0' cy='0' r='600'/%3E%3Ccircle fill='%2315186d' cx='0' cy='0' r='500'/%3E%3Ccircle fill='%23121562' cx='0' cy='0' r='400'/%3E%3Ccircle fill='%23101258' cx='0' cy='0' r='300'/%3E%3Ccircle fill='%230d0e4f' cx='0' cy='0' r='200'/%3E%3Ccircle fill='%230B0B45' cx='0' cy='0' r='100'/%3E%3C/g%3E%3C/svg%3E");
+background-attachment: fixed;
+background-size: cover;
   
 }
 
@@ -199,11 +202,15 @@ border: 1px solid rgba(255, 255, 255, 0.78);
   }
 }
 
-.github-link {
+.icon-link {
   color: white;
   margin: .5rem;
   font-size: 2rem;
   font-weight: 500;
+}
+
+.icon-link:hover{
+  color: black;
 }
 
 .github-link:hover {
@@ -348,6 +355,56 @@ border: 1px solid rgba(255, 255, 255, 0.78);
 .project-icon {
   font-size: 2rem;
   margin: .25rem;
+  color: white;
+}
+
+.project-icon:hover {
+  color: black;
 }
 
 
+.signature {
+	text-transform: uppercase;
+	letter-spacing: .5em;
+	display: inline-block;
+	border-width: 4px 0;
+	padding: 1.5em 0em;
+	position: absolute;
+
+	left: 40%;
+	margin: 0 0 0 -20em;
+}
+
+.signature span {
+
+  font: 700 1em/1 "Oswald", sans-serif;
+  letter-spacing: 0;
+  padding: .25em 0 .325em;
+  display: block;
+  margin: 0 auto;
+  text-shadow: 0 0 80px rgba(255,255,255,.5);
+
+/* Clip Background Image */
+
+  background: url('gradient.png') repeat-y;
+  -webkit-background-clip: text;
+  background-clip: text;
+
+/* Animate Background Image */
+
+  -webkit-text-fill-color: transparent;
+  -webkit-animation: aitf 80s linear infinite;
+
+/* Activate hardware acceleration for smoother animations */
+
+  -webkit-transform: translate3d(0,0,0);
+  -webkit-backface-visibility: hidden;
+
+}
+
+/* Animate Background Image */
+
+@-webkit-keyframes aitf {
+	0% { background-position: 0% 50%; }
+	100% { background-position: 100% 50%; }
+}
