--- a/portfolio/src/index.css
+++ b/portfolio/src/index.css
@@ -3,8 +3,13 @@
   src: url('agustina.ttf');
 }
 
-* {
+@font-face {
+  font-family: 'inconsalata';
+  src: url('inconsalata.ttf');
+}
 
+* {
+  font-family: 'inconsalata';
 }
 
 html {
@@ -13,15 +18,18 @@ html {
 }
 
 body {
-  background-color: #2F47FF;
-background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='100%25' height='100%25' viewBox='0 0 1600 800'%3E%3Cg stroke='%23000' stroke-width='66.7' stroke-opacity='0.05' %3E%3Ccircle fill='%232F47FF' cx='0' cy='0' r='1800'/%3E%3Ccircle fill='%232e43f3' cx='0' cy='0' r='1700'/%3E%3Ccircle fill='%232c3fe7' cx='0' cy='0' r='1600'/%3E%3Ccircle fill='%232a3bdb' cx='0' cy='0' r='1500'/%3E%3Ccircle fill='%232838cf' cx='0' cy='0' r='1400'/%3E%3Ccircle fill='%232634c4' cx='0' cy='0' r='1300'/%3E%3Ccircle fill='%232430b8' cx='0' cy='0' r='1200'/%3E%3Ccircle fill='%23222cad' cx='0' cy='0' r='1100'/%3E%3Ccircle fill='%232029a2' cx='0' cy='0' r='1000'/%3E%3Ccircle fill='%231e2597' cx='0' cy='0' r='900'/%3E%3Ccircle fill='%231c228c' cx='0' cy='0' r='800'/%3E%3Ccircle fill='%23191e81' cx='0' cy='0' r='700'/%3E%3Ccircle fill='%23171b77' cx='0' cy='0' r='600'/%3E%3Ccircle fill='%2315186d' cx='0' cy='0' r='500'/%3E%3Ccircle fill='%23121562' cx='0' cy='0' r='400'/%3E%3Ccircle fill='%23101258' cx='0' cy='0' r='300'/%3E%3Ccircle fill='%230d0e4f' cx='0' cy='0' r='200'/%3E%3Ccircle fill='%230B0B45' cx='0' cy='0' r='100'/%3E%3C/g%3E%3C/svg%3E");
-background-attachment: fixed;
-background-size: cover;
+
   
 }
 
 .navbar {
-  justify-content: flex-end;
+    display: flex;
+    margin-top: -4rem;
+    align-items: center;
+    font-size: 1rem;
+    position: sticky;
+    top: 0;
+    z-index: 10;
 }
 
 @media (max-width: 850px) {
@@ -31,11 +39,17 @@ background-size: cover;
 }
 
 .site-logo {
-  font-family: "agustina";
+
 }
 
 .nav-item {
-  color: white
+  color: black;
+  text-shadow: white 3px 3px 3px;
+}
+
+[data-theme=dark] .nav-item {
+  color: white;
+  text-shadow: black 3px 3px 3px;
 }
 
 /* Default styles for the sidebar */
@@ -134,11 +148,19 @@ border: 1px solid rgba(255, 255, 255, 0.78);
   color: white;
 }
 
+[data-theme=dark] .job-summary h2 {
+  color: white;
+}
+
 .job-summary p {
   margin-top: 0;
   margin-bottom: 20px;
   font-size: 1.5rem;
   font-weight: bold;
+  color: black;
+}
+
+[data-theme=dark] .job-summary p {
   color: white;
 }
 
@@ -151,6 +173,11 @@ border: 1px solid rgba(255, 255, 255, 0.78);
 .job-summary li {
   margin-bottom: 10px;
   font-size: 1.2rem;
+  color: black;
+}
+
+[data-theme=dark] .job-summary li {
+  color: white;
 }
 
 
@@ -188,11 +215,45 @@ border: 1px solid rgba(255, 255, 255, 0.78);
   align-items: center;
 }
 
+.project-card-front {
+  background: rgba(255, 255, 255, 0.24);
+  border-radius: 16px;
+  box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
+  backdrop-filter: blur(3.6px);
+  -webkit-backdrop-filter: blur(3.6px);
+  border: 1px solid rgba(255, 255, 255, 0.78);
+  width: 48%;
+  margin: 8px;
+  justify-content: center;
+  align-items: center;
+}
+
+.project-card-back {
+  background: rgba(255, 255, 255, 0.24);
+  border-radius: 16px;
+  box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
+  backdrop-filter: blur(3.6px);
+  -webkit-backdrop-filter: blur(3.6px);
+  border: 1px solid rgba(255, 255, 255, 0.78);
+  width: 48%;
+  margin: 8px;
+  justify-content: center;
+  align-items: center;
+}
+
 .project-card h3 {
+  color: black;
+}
+
+[data-theme=dark] .project-card h3 {
   color: white;
 }
 
 .project-card p {
+  color: black;
+}
+
+[data-theme=dark] .project-card p {
   color: white;
 }
 
@@ -203,10 +264,14 @@ border: 1px solid rgba(255, 255, 255, 0.78);
 }
 
 .icon-link {
-  color: white;
+  color: black;
   margin: .5rem;
   font-size: 2rem;
   font-weight: 500;
+}
+
+[data-theme=dark] .icon-link{
+  color: white;
 }
 
 .icon-link:hover{
@@ -355,10 +420,18 @@ border: 1px solid rgba(255, 255, 255, 0.78);
 .project-icon {
   font-size: 2rem;
   margin: .25rem;
+  color: black;
+}
+
+[data-theme=dark] .project-icon {
   color: white;
 }
 
 .project-icon:hover {
+  color: white;
+}
+
+[data-theme=dark] .project-icon:hover {
   color: black;
 }
 
@@ -407,4 +480,33 @@ border: 1px solid rgba(255, 255, 255, 0.78);
 @-webkit-keyframes aitf {
 	0% { background-position: 0% 50%; }
 	100% { background-position: 100% 50%; }
+}
+
+
+[data-theme=light],
+:root:not([data-theme=dark]) {
+  color-scheme: light;
+  background-color: #FFFFFF;
+  background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='100%25' height='100%25' viewBox='0 0 1600 800'%3E%3Cg stroke='%23B8A99D' stroke-width='66.7' stroke-opacity='0.05' %3E%3Ccircle fill='%23FFFFFF' cx='0' cy='0' r='1800'/%3E%3Ccircle fill='%23fdfdfd' cx='0' cy='0' r='1700'/%3E%3Ccircle fill='%23fbfbfb' cx='0' cy='0' r='1600'/%3E%3Ccircle fill='%23f9f9f9' cx='0' cy='0' r='1500'/%3E%3Ccircle fill='%23f7f7f7' cx='0' cy='0' r='1400'/%3E%3Ccircle fill='%23f5f5f5' cx='0' cy='0' r='1300'/%3E%3Ccircle fill='%23f3f3f3' cx='0' cy='0' r='1200'/%3E%3Ccircle fill='%23f1f1f1' cx='0' cy='0' r='1100'/%3E%3Ccircle fill='%23efefef' cx='0' cy='0' r='1000'/%3E%3Ccircle fill='%23ededed' cx='0' cy='0' r='900'/%3E%3Ccircle fill='%23ebebeb' cx='0' cy='0' r='800'/%3E%3Ccircle fill='%23e9e9e9' cx='0' cy='0' r='700'/%3E%3Ccircle fill='%23e7e7e7' cx='0' cy='0' r='600'/%3E%3Ccircle fill='%23e5e5e5' cx='0' cy='0' r='500'/%3E%3Ccircle fill='%23e3e3e3' cx='0' cy='0' r='400'/%3E%3Ccircle fill='%23e1e1e1' cx='0' cy='0' r='300'/%3E%3Ccircle fill='%23dfdfdf' cx='0' cy='0' r='200'/%3E%3Ccircle fill='%23DDDDDD' cx='0' cy='0' r='100'/%3E%3C/g%3E%3C/svg%3E");
+  background-attachment: fixed;
+  background-size: cover;
+}
+
+@media only screen and (prefers-color-scheme: dark) {
+  :root:not([data-theme=light]) {
+    color-scheme: dark;
+    background-color: #2F47FF;
+    background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='100%25' height='100%25' viewBox='0 0 1600 800'%3E%3Cg stroke='%23000' stroke-width='66.7' stroke-opacity='0.05' %3E%3Ccircle fill='%232F47FF' cx='0' cy='0' r='1800'/%3E%3Ccircle fill='%232e43f3' cx='0' cy='0' r='1700'/%3E%3Ccircle fill='%232c3fe7' cx='0' cy='0' r='1600'/%3E%3Ccircle fill='%232a3bdb' cx='0' cy='0' r='1500'/%3E%3Ccircle fill='%232838cf' cx='0' cy='0' r='1400'/%3E%3Ccircle fill='%232634c4' cx='0' cy='0' r='1300'/%3E%3Ccircle fill='%232430b8' cx='0' cy='0' r='1200'/%3E%3Ccircle fill='%23222cad' cx='0' cy='0' r='1100'/%3E%3Ccircle fill='%232029a2' cx='0' cy='0' r='1000'/%3E%3Ccircle fill='%231e2597' cx='0' cy='0' r='900'/%3E%3Ccircle fill='%231c228c' cx='0' cy='0' r='800'/%3E%3Ccircle fill='%23191e81' cx='0' cy='0' r='700'/%3E%3Ccircle fill='%23171b77' cx='0' cy='0' r='600'/%3E%3Ccircle fill='%2315186d' cx='0' cy='0' r='500'/%3E%3Ccircle fill='%23121562' cx='0' cy='0' r='400'/%3E%3Ccircle fill='%23101258' cx='0' cy='0' r='300'/%3E%3Ccircle fill='%230d0e4f' cx='0' cy='0' r='200'/%3E%3Ccircle fill='%230B0B45' cx='0' cy='0' r='100'/%3E%3C/g%3E%3C/svg%3E");
+    background-attachment: fixed;
+    background-size: cover;
+    font-family: 'inconsalata';
+  }
+}
+[data-theme=dark] {
+    color-scheme: dark;
+    background-color: #2F47FF;
+    background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='100%25' height='100%25' viewBox='0 0 1600 800'%3E%3Cg stroke='%23000' stroke-width='66.7' stroke-opacity='0.05' %3E%3Ccircle fill='%232F47FF' cx='0' cy='0' r='1800'/%3E%3Ccircle fill='%232e43f3' cx='0' cy='0' r='1700'/%3E%3Ccircle fill='%232c3fe7' cx='0' cy='0' r='1600'/%3E%3Ccircle fill='%232a3bdb' cx='0' cy='0' r='1500'/%3E%3Ccircle fill='%232838cf' cx='0' cy='0' r='1400'/%3E%3Ccircle fill='%232634c4' cx='0' cy='0' r='1300'/%3E%3Ccircle fill='%232430b8' cx='0' cy='0' r='1200'/%3E%3Ccircle fill='%23222cad' cx='0' cy='0' r='1100'/%3E%3Ccircle fill='%232029a2' cx='0' cy='0' r='1000'/%3E%3Ccircle fill='%231e2597' cx='0' cy='0' r='900'/%3E%3Ccircle fill='%231c228c' cx='0' cy='0' r='800'/%3E%3Ccircle fill='%23191e81' cx='0' cy='0' r='700'/%3E%3Ccircle fill='%23171b77' cx='0' cy='0' r='600'/%3E%3Ccircle fill='%2315186d' cx='0' cy='0' r='500'/%3E%3Ccircle fill='%23121562' cx='0' cy='0' r='400'/%3E%3Ccircle fill='%23101258' cx='0' cy='0' r='300'/%3E%3Ccircle fill='%230d0e4f' cx='0' cy='0' r='200'/%3E%3Ccircle fill='%230B0B45' cx='0' cy='0' r='100'/%3E%3C/g%3E%3C/svg%3E");
+    background-attachment: fixed;
+    background-size: cover;
+    font-family: 'inconsalata';
 }
